[metadata]
name = pf2e-jaythespacehound
version = 0.0.1
author = Jay Blanchard and Heath Cowled
author_email = jaythespacehound@gmail.com
description = Pathfinder 2e character tracker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaythespacehound/pf2e
project_urls =
    Bug Tracker = https://github.com/jaythespacehound/pf2e
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

